--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      href="style.css"
+    />
     <title>Js tricks</title>
-</head>
-<body>
+  </head>
+  <body>
+    <h1>JS Tricks</h1>
 
-<h1> JS Tricks </h1>
-
-<div>  
-<p  id="link"> http://localhost:3000/users</p>
-<button id = "copyButton">  copy </button>
-</div>
-<hr>
-<div>  
-<textarea name="" id="area" cols="30" rows="10"></textarea>
-
-</div>
-
-<hr>
-<input type="number" name="num" id="num">
-<input type="date" name="num" id="date">
-<button id="get-date"> get Date Value </button>
-<span id="date-span">rt</span>
+    <div>
+      <p id="link">http://localhost:3000/users</p>
+      <button id="copyButton">copy</button>
+    </div>
+    <hr />
+    <div class="container">
+      <div class="grid-example">
+        <section class="box">Section 1</section>
+        <section class="box">Section 2</section>
+        <section class="box">Section 3</section>
+        <section class="box">Section 4</section>
+        <section class="box">Section 5</section>
+        <section class="box">Section 6</section>
+      </div>
+    </div>
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
